[gd_scene load_steps=5 format=3 uid="uid://cil6jwu6v4xku"]

[ext_resource type="Script" path="res://scenes/menus/recap.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cl4p3jkjhorjv" path="res://ui/fonts/Bitmgothic.ttf" id="3_251xe"]
[ext_resource type="Theme" uid="uid://bfslj868ae21m" path="res://ui/theme.tres" id="5"]
[ext_resource type="AudioStream" uid="uid://t6exsd0tr5iu" path="res://music/end_music.ogg" id="7"]

[node name="Recap" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.943848
offset_top = -0.943878
offset_right = -0.943848
offset_bottom = -0.943848
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5")
script = ExtResource("1")

[node name="MenuTitle" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.0
offset_top = 69.0
offset_right = 152.0
offset_bottom = 133.0
grow_horizontal = 2
theme = ExtResource("5")
theme_override_fonts/font = ExtResource("3_251xe")
theme_override_font_sizes/font_size = 64
text = "Game Over"
horizontal_alignment = 1

[node name="UndoButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.056
offset_top = 625.0
offset_right = -88.056
offset_bottom = 651.0
grow_horizontal = 2
theme = ExtResource("5")
text = "Undo Last Move"

[node name="FreeplayButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 625.0
offset_right = 60.0
offset_bottom = 651.0
theme = ExtResource("5")
text = "Freeplay"

[node name="TitleScreenButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = 88.0
offset_top = 625.0
offset_right = 216.0
offset_bottom = 651.0
theme = ExtResource("5")
text = "Title Screen"

[node name="EndGameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")

[connection signal="pressed" from="UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="pressed" from="FreeplayButton" to="." method="_on_FreeplayButton_pressed"]
[connection signal="pressed" from="TitleScreenButton" to="." method="_on_TitleScreenButton_pressed"]
